--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -37,6 +37,13 @@ header
                 a
                     text-decoration: none
                     color: white
+                a:hover
+                    background-color: white
+                    color: black
+                    padding: 15px 15px
+                    font-weight: bold
+                    
+                    
                 
 
             
