--- a/src/sass/modules/_main.sass
+++ b/src/sass/modules/_main.sass
@@ -6,7 +6,7 @@ body
 .bg-image
     background-image: url(../img/banner.jpg)
     height: 90vh
-    background-color: rgb(81, 78, 78,0.8)
+    background-color: rgba(7, 7, 7, 0.8)
     background-blend-mode: darken
     background-repeat: no-repeat
     background-size: cover
